--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,12 @@
 
 <!--Navigation bar-->
 <div class="container-fluid">
-    <div class="dropdown col-xs-4 col-sm-2 col-md-2 col-lg-1 border-bottom border-left border-right rounded p-1 m-0">
+    <div class="dropright col-xs-4 col-sm-2 col-md-2 col-lg-1 border-bottom border-left border-right rounded p-1 m-0">
         <div class="col-xs-12 ">
             <h5 class="text-center">Crime HotSpot</h5>
         </div>
-        <button class="btn btn-default dropdown-toggle col-sm-12 col-md-12 col-lg-12" type="button" id="menu1" data-toggle="dropdown">
+        <button class="btn btn-default dropdown-toggle col-sm-12 col-md-12 col-lg-12" type="button" id="menu1"
+                data-toggle="dropdown">
             <img class="img-fluid" alt="CrimeHotSpot Logo" src="../app/Content/Images/crimehotspot_logo.png">
             <span class="caret"></span>
         </button>
@@ -58,6 +59,7 @@
             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
         </ul>
     </div>
+
 </div>
 
 
@@ -71,38 +73,15 @@
 <!--</div>-->
 
 
-<!--<ul class="navbar-nav">-->
-<!--<li class="nav-item dropdown">-->
-<!--<a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"-->
-<!--data-toggle="dropdown"-->
-<!--aria-haspopup="true" aria-expanded="false">-->
-<!--Menu-->
-<!--</a>-->
-<!--<div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-<!--<a class="dropdown-item" href="#">Map</a>-->
-<!--<a class="dropdown-item" href="#">Analytics</a>-->
-<!--<div class="dropdown-divider"></div>-->
-<!--<a class="dropdown-item" href="#">About Us</a>-->
-<!--</div>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</div>-->
-<!--</nav>-->
-<!--</div>-->
-
-<!--<div id="mySidenav" class="sidenav">-->
-    <!--&lt;!&ndash;<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>&ndash;&gt;-->
-    <!--<a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png"/></a>-->
-    <!--<a href="#">Car Theft <img src="../app/Content/Images/car-theft.png"/></a>-->
-    <!--<a href="#">House Breakins<img src="../app/Content/Images/house-theft.png"/></a>-->
-<!--</div>-->
-<!--<a id="sidenavbtn" class="openbtn" onclick="openNav()">&#9776; open</a>-->
-
-
-<!--<span id="openButton" onclick="openNav()">&#9776; open</span>-->
+<div id="mySidenav" class="sidenav h-75" ng-click="">
+    <!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
+    <a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png"/></a>
+    <a href="#">Car Theft <img src="../app/Content/Images/car-theft.png"/></a>
+    <a href="#">House Breakins<img src="../app/Content/Images/house-theft.png"/></a>
+</div>
 
 <div class="container">
-    <div class="color-scale-holder fixed-bottom mx-auto border-top border-bottom border-secondary rounded mb-2 col-xs-1 col-sm-6 col-md-5 col-lg-4 col-centered">
+    <div class="color-scale-holder fixed-bottom mx-auto border-top border-bottom border-secondary rounded mb-2 col-xs-1 col-sm-6 col-md-7 col-lg-4 col-centered">
         <div class="d-inline-block w-100">
             <h6 class="float-left">Dangerous</h6>
             <h6 class="float-right">Safer</h6>
