--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
 
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+	  <!-- jquery -->
+	  
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
       <!-- ABOVE FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
       
@@ -27,12 +30,14 @@
       </script>
 
       <!-- Angular -->
-      <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
+      <!-- <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script> -->
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>
       <script src="../app/app.js"></script>
       <script src="../app/Controllers/gservice.js"></script>
+	  <script src="../app/Controllers/category.js"></script>
       <script src="../app/Controllers/mapLoad.js"></script>
+	  
 
       <!--Custom animations for CrimeHotSpot-->
       <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
@@ -77,9 +82,11 @@
 
   <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png" height="120px" width="120px"/></a>
-      <a href="#">Car Theft <img src="../app/Content/Images/car-theft.png" height="120px" width="120px"/></a>
-      <a href="#">House Breakins<img src="../app/Content/Images/house-theft.png" height="120px" width="120px"/></a>
+      <a href="#" class="publicCrimes">		King Pin 		<img src="../app/Content/Images/Kingpinm.png" 		 height="120px" width="120px"/></a>
+      <a href="#" class="publicCrimes">		Public Crimes 	<img src="../app/Content/Images/knife-icon.png" 	 height="120px" width="120px"/></a>
+      <a href="#" class="Property-Crimes">  Property Crimes <img src="../app/Content/Images/car-theft.png" 		 height="120px" width="120px"/></a>
+      <a href="#" class="Assault">			Assault			<img src="../app/Content/Images/robbery-icon-17.png" height="120px" width="120px"/></a>
+	  <a href="#" class="Personal">			Personal		<img src="../app/Content/Images/house-theft.png"	 height="120px" width="120px"/></a>
   </div>
   <a id="sidenavbtn" class="openbtn" onclick="openNav()">&#9776; open</a>
 
