--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app = 'crimeHotSpot'>
+<html ng-app ='crimeHotSpot'>
   <head>
 
       <!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
@@ -14,7 +14,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
       <!-- ABOVE FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
-      
+
       <!-- style sheet -->
       <link href="../app/StyleSheets/index.css" rel="stylesheet" type="text/css" >
       <link href="../app/StyleSheets/mainstyle.css" rel="stylesheet" type="text/css">
@@ -30,76 +30,23 @@
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>
-      <script src="../app/app.js"></script>
-      <script src="../app/Controllers/gservice.js"></script>
-      <script src="../app/Controllers/mapLoad.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/gservice.js"></script>
+      <script src="js/mapLoad.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.js"></script>
 
       <!--Custom animations for CrimeHotSpot-->
       <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
 
-
   </head>
-  <body ng-controller="mapLoad">
-  <div id="map"></div>
+  <body >
 
+  <div ui-view>
 
-  <!--Navigation bar-->
-  <div class="container-fluid">
-      <div class="dropright col-xs-4 col-sm-2 col-md-2 col-lg-1 border-bottom border-left border-right rounded p-1 m-0">
-          <div class="col-xs-12 ">
-              <h5 class="text-center">Crime HotSpot</h5>
-          </div>
-          <button class="btn btn-default dropdown-toggle col-sm-12 col-md-12 col-lg-12" type="button" id="menu1"
-                  data-toggle="dropdown">
-              <img class="img-fluid" alt="CrimeHotSpot Logo" src="../app/Content/Images/crimehotspot_logo.png">
-              <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-              <li class="border-bottom" role="presentation"><a role="menuitem" tabindex="-1" href="#">Map</a></li>
-              <li class="border-bottom" role="presentation"><a role="menuitem" tabindex="-1" href="#">Analytics</a></li>
-              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
-          </ul>
-      </div>
-
-  </div>
-
-
-  <!--Sidenav for crime profiles-->
-  <div id="mySidenav" class="sidenav">
-      <h5 class="text-center">Crime Against</h5>
-      <hr>
-      <div ng-click="mapLoad.publicProfileToggle()" class="profile text-center">
-          <h5>Public</h5>
-          <a href="#"><img src="../app/Content/Images/public-crime.png"/></a>
-      </div>
-      <hr>
-      <div class="profile text-center">
-          <h5>Property</h5>
-          <a href="#"><img src="../app/Content/Images/car-theft.png"/></a>
-      </div>
-      <hr>
-      <div class="profile text-center">
-          <h5>Person</h5>
-          <a href="#"><img src="../app/Content/Images/person-crime.png"/></a>
-      </div>
-      <hr>
-      <div class="profile text-center">
-          <h5>Person: Severe</h5>
-          <a class="active" href="#"><img src="../app/Content/Images/knife-icon.png"/></a>
-      </div>
-      <hr>
-  </div>
-
-  <!--Color legend-->
-  <div class="container">
-      <div class="color-scale-holder fixed-bottom mx-auto border-top border-bottom border-secondary rounded mb-2 col-xs-1 col-sm-6 col-md-7 col-lg-4 col-centered">
-          <div class="d-inline-block w-100">
-              <h6 class="float-left">Dangerous</h6>
-              <h6 class="float-right">Safer</h6>
-          </div>
-          <div id="color-gradient"></div>
-      </div>
   </div>
 
   </body>
+
+
+
 </html>
