--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
               src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization">
       </script>
 
+      <!-- ... -->
+      <script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
+      <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
+      <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+      <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
+
       <!-- Angular -->
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
@@ -40,7 +48,6 @@
 
   </head>
   <body >
-
   <div ui-view>
 
   </div>
