--- a/public/index.html
+++ b/public/index.html
@@ -26,17 +26,15 @@
               src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization">
       </script>
 
-
-
       <!-- Angular -->
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>
-      <script src="js/app.js"></script>
+      <script src="app.js"></script>
       <script src="js/gservice.js"></script>
       <script src="js/mapLoad.js"></script>
+      <script src="../app/Controllers/analytics.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.js"></script>
-
       <!--Custom animations for CrimeHotSpot-->
       <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
 
