--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,14 @@
               src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization">
       </script>
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-      <script src="../app/JavaScripts/ThirdParty/angular-chart.js/dist/angular-chart.min.js"></script>
+
 
       <!-- Angular -->
-      <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
+     <!-- This is a duplicate load of angular.js <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>-->
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+      <script src="../app/JavaScripts/ThirdParty/angular-chart.js/dist/angular-chart.min.js"></script>
       <script src="app.js"></script>
       <script src="js/gservice.js"></script>
       <script src="js/mapLoad.js"></script>
@@ -43,7 +44,6 @@
       <script src="../app/JavaScripts/ThirdParty/angular-chart.js/dist/angular-chart.min.js"></script>
 
       <script src="../app/Controllers/analytics.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.js"></script>
 
       <!--Custom animations for CrimeHotSpot-->
       <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
