--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <script src="app.js"></script>
       <script src="js/gservice.js"></script>
       <script src="js/mapLoad.js"></script>
-      <script src="js/pieChart.js"></script>
+      <script src="js/crimeChart.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.js"></script>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
