--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
 
       <!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
 
+      <!--favicon-->
+      <link rel="icon" src=>
+      <link href="../app/Content/Images/favicon.ico" rel="icon" type="image/x-icon" />
+
       <!-- jQuery library -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
