--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       <link href="../app/StyleSheets/index.css" rel="stylesheet" type="text/css" >
       <link href="../app/StyleSheets/mainstyle.css" rel="stylesheet" type="text/css">
       <link href="../app/StyleSheets/sidenav.css" rel="stylesheet" type="text/css">
+      <link href="../app/StyleSheets/3dbuttons.css" rel="stylesheet" type="text/css">
 
 
       <!-- Google Maps API -->
